# Fourio

./: .gitignore
backend/: main.py  pyproject.toml
